infrastructure/base/configs/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik-system
      sectionName: websecure
  hostnames:
    - "grafana.${cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
